# file_typing

./: .gitignore  .travis.yml  CMakeLists.txt  Magic.cpp  Magic.hpp  README.md  main.cpp
data/: test.txt
